--- a/NotasAlumnos/nbproject/project.properties
+++ b/NotasAlumnos/nbproject/project.properties
@@ -27,9 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/NotasAlumnos.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.mysql-connector-java-8.0.17.jar=../../../NOBORRAR/mysql-connector-java-8.0.17.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${libs.hibernate4-support.classpath}:\
+    ${libs.jpa2-persistence.classpath}:\
+    ${file.reference.mysql-connector-java-8.0.17.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
