--- a/NotasAlumnosFX/nbproject/project.properties
+++ b/NotasAlumnosFX/nbproject/project.properties
@@ -35,7 +35,10 @@ includes=**
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
-    ${javafx.classpath.extension}
+    ${javafx.classpath.extension}:\
+    ${libs.hibernate4-support.classpath}:\
+    ${libs.mysql_8.0.17.classpath}:\
+    ${reference.NotasAlumnos.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -78,7 +81,7 @@ javafx.enable.concurrent.external.runs=false
 javafx.enabled=true
 javafx.fallback.class=com.javafx.main.NoJavaFXFallback
 # Main class for JavaFX
-javafx.main.class=notasalumnosfx.NotasAlumnosFX
+javafx.main.class=Controlador.Main
 javafx.preloader.class=
 # This project does not use Preloader
 javafx.preloader.enabled=false
@@ -101,6 +104,8 @@ manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 platform.active=default_platform
+project.NotasAlumnos=../NotasAlumnos
+reference.NotasAlumnos.jar=${project.NotasAlumnos}/dist/NotasAlumnos.jar
 run.classpath=\
     ${dist.jar}:\
     ${javac.classpath}:\
