--- a/NotasAlumnos/nbproject/private/private.properties
+++ b/NotasAlumnos/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\hygro\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+file.reference.mysql-connector-java-8.0.17.jar=D:\\conector\\mysql-connector-java-8.0.17.jar
+user.properties.file=C:\\Users\\IngeMayk\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
