--- a/NotasAlumnosFX/nbproject/project.properties
+++ b/NotasAlumnosFX/nbproject/project.properties
@@ -37,7 +37,7 @@ javac.classpath=\
     ${javafx.classpath.extension}:\
     ${libs.hibernate4-support.classpath}:\
     ${reference.NotasAlumnos.jar}:\
-    ${libs.Msql8.2conector.classpath}
+    ${libs.mysql_8.17.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
