--- a/NotasAlumnos/nbproject/private/private.properties
+++ b/NotasAlumnos/nbproject/private/private.properties
@@ -1,3 +1,6 @@
 compile.on.save=true
-file.reference.mysql-connector-java-8.0.17.jar=D:\\conector\\mysql-connector-java-8.0.17.jar
-user.properties.file=C:\\Users\\IngeMayk\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+do.depend=false
+do.jar=true
+javac.debug=true
+javadoc.preview=true
+user.properties.file=C:\\Users\\CPUX\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
