--- a/NotasAlumnosFX/nbproject/project.properties
+++ b/NotasAlumnosFX/nbproject/project.properties
@@ -29,6 +29,9 @@ dist.jar=${dist.dir}/NotasAlumnosFX.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-logging-1.3.4.jar=E:\\gta\\commons-logging-1.3.4-bin\\commons-logging-1.3.4\\commons-logging-1.3.4.jar
+file.reference.fontbox-2.0.32.jar=C:\\Users\\wissegt\\Downloads\\fontbox-2.0.32.jar
+file.reference.pdfbox-2.0.32.jar=C:\\Users\\wissegt\\Downloads\\pdfbox-2.0.32.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -37,7 +40,10 @@ javac.classpath=\
     ${javafx.classpath.extension}:\
     ${libs.hibernate4-support.classpath}:\
     ${reference.NotasAlumnos.jar}:\
-    ${libs.mysql_8.17.classpath}
+    ${libs.mysql_8.17.classpath}:\
+    ${file.reference.pdfbox-2.0.32.jar}:\
+    ${file.reference.fontbox-2.0.32.jar}:\
+    ${file.reference.commons-logging-1.3.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
