--- a/NotasAlumnosFX/nbproject/private/private.properties
+++ b/NotasAlumnosFX/nbproject/private/private.properties
@@ -4,6 +4,9 @@ do.depend=false
 do.jar=true
 # No need to modify this property unless customizing JavaFX Ant task infrastructure
 endorsed.javafx.ant.classpath=.
+file.reference.commons-logging-1.3.4.jar=D:\\Progra\\conectores\\commons-logging-1.3.4.jar
+file.reference.fontbox-2.0.32.jar=D:\\Progra\\conectores\\fontbox-2.0.32.jar
+file.reference.pdfbox-2.0.32.jar=D:\\Progra\\conectores\\pdfbox-2.0.32.jar
 javac.debug=true
 javadoc.preview=true
 javafx.run.inbrowser=<Default System Browser>
