Crear MenuImprimirBoletinFx(No terminado)

--- a/NotasAlumnosFX/nbproject/project.properties
+++ b/NotasAlumnosFX/nbproject/project.properties
@@ -29,9 +29,10 @@ dist.jar=${dist.dir}/NotasAlumnosFX.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.commons-logging-1.3.4.jar=E:\\gta\\commons-logging-1.3.4-bin\\commons-logging-1.3.4\\commons-logging-1.3.4.jar
-file.reference.fontbox-2.0.32.jar=C:\\Users\\wissegt\\Downloads\\fontbox-2.0.32.jar
-file.reference.pdfbox-2.0.32.jar=C:\\Users\\wissegt\\Downloads\\pdfbox-2.0.32.jar
+file.reference.commons-logging-1.3.4.jar=C:\\Users\\USER\\Documents\\commons-logging-1.3.4.jar
+file.reference.fontbox-2.0.32.jar=C:\\Users\\USER\\Documents\\fontbox-2.0.32.jar
+file.reference.mysql-connector-java-8.0.17.jar=C:\\Users\\USER\\Documents\\No borrar conector Sql\\mysql-connector-java-8.0.17.jar
+file.reference.pdfbox-2.0.32.jar=C:\\Users\\USER\\Documents\\pdfbox-2.0.32.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -40,10 +41,11 @@ javac.classpath=\
     ${javafx.classpath.extension}:\
     ${libs.hibernate4-support.classpath}:\
     ${reference.NotasAlumnos.jar}:\
-    ${libs.mysql_8.17.classpath}:\
+    ${file.reference.mysql-connector-java-8.0.17.jar}:\
     ${file.reference.pdfbox-2.0.32.jar}:\
     ${file.reference.fontbox-2.0.32.jar}:\
-    ${file.reference.commons-logging-1.3.4.jar}
+    ${file.reference.commons-logging-1.3.4.jar}:\
+    ${libs.jpa2-persistence.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
