--- a/NotasAlumnosFX/nbproject/private/private.properties
+++ b/NotasAlumnosFX/nbproject/private/private.properties
@@ -4,12 +4,12 @@ do.depend=false
 do.jar=true
 # No need to modify this property unless customizing JavaFX Ant task infrastructure
 endorsed.javafx.ant.classpath=.
-file.reference.commons-logging-1.3.4.jar=D:\\Progra\\conectores\\commons-logging-1.3.4.jar
-file.reference.fontbox-2.0.32.jar=D:\\Progra\\conectores\\fontbox-2.0.32.jar
-file.reference.mysql-connector-java-8.0.17.jar=C:\\Program Files\\NetBeans 8.2\\codconection\\mysql-connector-java-8.0.17.jar
-file.reference.pdfbox-2.0.32.jar=D:\\Progra\\conectores\\pdfbox-2.0.32.jar
+file.reference.commons-logging-1.3.4.jar=D:\\conector\\Librerrias\\commons-logging-1.3.4.jar
+file.reference.fontbox-2.0.32.jar=D:\\conector\\Librerrias\\fontbox-2.0.32.jar
+file.reference.mysql-connector-java-8.0.17.jar=D:\\conector\\Librerrias\\mysql-connector-java-8.0.17.jar
+file.reference.pdfbox-2.0.32.jar=D:\\conector\\Librerrias\\pdfbox-2.0.32.jar
 javac.debug=true
 javadoc.preview=true
 javafx.run.inbrowser=<Default System Browser>
 javafx.run.inbrowser.path=C:\\Program Files\\Internet Explorer\\iexplore.exe
-user.properties.file=C:\\Users\\wissegt\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\IngeMayk\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
