--- a/NotasAlumnos/nbproject/private/private.properties
+++ b/NotasAlumnos/nbproject/private/private.properties
@@ -1,9 +1,9 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
-file.reference.javax.mail.jar=D:\\conector\\Librerrias\\javax.mail.jar
-file.reference.mysql-connector-java-8.0.17.jar=D:\\conector\\Librerrias\\mysql-connector-java-8.0.17.jar
+file.reference.javax.mail.jar=D:\\Progra\\conectores\\javax.mail.jar
+file.reference.mysql-connector-java-8.0.17.jar=D:\\Progra\\conectores\\mysql-connector-java-8.0.17.jar
 file.reference.mysql-connector-java-8.0.17.jar-1=C:\\Program Files\\NetBeans 8.2\\codconection\\mysql-connector-java-8.0.17.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\IngeMayk\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\wissegt\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
