--- a/NotasAlumnos/nbproject/project.properties
+++ b/NotasAlumnos/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.javax.mail.jar=D:\\Progra\\conectores\\javax.mail.jar
+file.reference.jbcrypt-0.4.jar=D:\\Progra\\conectores\\jbcrypt-0.4.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Program Files\\NetBeans 8.2\\ide\\modules\\ext\\mysql-connector-java-5.1.23-bin.jar
 file.reference.mysql-connector-java-8.0.17.jar=D:\\El ahorcado\\mysql-connector-java-8.0.17.jar
 file.reference.mysql-connector-java-8.0.17.jar-1=C:\\Users\\CPUX\\Downloads\\mysql-connector-java-8.0.17.jar
@@ -40,7 +41,8 @@ javac.classpath=\
     ${libs.jpa2-persistence.classpath}:\
     ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
     ${file.reference.mysql-connector-java-8.0.17.jar}:\
-    ${file.reference.javax.mail.jar}
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.jbcrypt-0.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
